--- a/index.html
+++ b/index.html
@@ -135,10 +135,11 @@
     if (/iPad/i.test(ua) || (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1)) {
       body.style.backgroundImage = "url('./static/foto/ipad.jpg')";
     } else if (/Android|iPhone|iPod/i.test(ua)) {
-      body.style.backgroundImage = "url('./static/foto/iphone.png')";
+      body.style.backgroundImage = "url('./static/foto/iphone.jpg')";
     } else {
       body.style.backgroundImage = "url('./static/foto/mac.jpg')";
     }
   </script>
 </body>
 </html>
+
